--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   english_words: ^4.0.0
   widgets: ^1.4.5
   animated_theme_switcher: ^2.0.6
+  google_sign_in: ^5.2.4
+  firebase_auth: ^3.3.9
+  firebase_core: ^1.13.1
 
 dev_dependencies:
   flutter_test:
