--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,13 @@ dependencies:
   firebase_core: ^1.13.1
   flutter_linkify: ^5.0.2
   url_launcher: ^6.0.20
+  google_fonts: ^2.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: ^0.8.0
+  flutter_launcher_icons: ^0.9.2
 
 flutter_icons:
   android: "launcher_icon"
