--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,20 @@ dependencies:
   google_sign_in: ^5.2.4
   firebase_auth: ^3.3.9
   firebase_core: ^1.13.1
+  flutter_linkify: ^5.0.2
+  url_launcher: ^6.0.20
+  google_fonts: ^2.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/zestyLogo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -65,7 +75,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/zestyLogo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
